# xplorer

./: package.json
scripts/: copyfiles.py
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: drives.rs  extensions.rs  files_api.rs  main.rs  storage.rs
src/Components/File/: DetailFile.tsx  GridFile.tsx  index.tsx
src/Components/Files/: files.scss
src/Components/Header/: SubHeader.tsx  index.tsx
src/Components/Layout/: layout.scss
src/Components/MainView/: index.tsx
src/Components/Sidebar/: index.tsx
src/Components/Theme/: theme.json
src/Icon/: index.tsx
src/Services/: AppService.ts  CliService.ts  ClipboardService.ts  DirectoryService.ts  DrivesService.ts  FilesService.ts  PlatformService.ts  StorageService.ts  WindowService.ts
src/Store/ActionCreators/: DirectoryActionCreators.ts  FilesActionCreators.ts  SelectionActionCreators.ts  TabActionCreators.ts  WindowActionCreators.ts
src/Store/Reducers/: ConfigReducer.ts  DirectoryReducer.ts  FilesReducer.ts  RequestReducer.ts  SelectionReducer.ts  TabReducer.ts  index.ts
src/Store/Sagas/: DirectorySaga.ts  WindowSaga.ts  index.ts
src/Typings/Store/: actions.ts  config.ts  directory.ts  files.ts  request.ts  selection.ts  store.ts  tab.ts  window.ts
src/components/Infobar/: index.tsx
src/components/OperationBar/: index.tsx
src/components/Theme/: index.tsx
