[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version="2.0.0-beta.11", features = [] }

[dependencies]
sysinfo = "0.28"
serde_json = "1"
serde = { version = "^1.0", features = ["derive"] }
tauri = { version="2.0.0-beta.14", features = [] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
open = "4"
path-absolutize = "3"
trash = "2"
notify = "6.1.1"
normpath = "0.3"
lazy_static = "1.4"
font-loader = "0.11"
clap = "3.0.14"
glob = "0.3"
parselnk = "0.1"
url = "2.2"
reqwest = "0.11"
tokio = { version = "^1", features = ["macros", "parking_lot", "rt"] }
bincode = "1.3"
zip = "0.6.2"
tauri-plugin-clipboard-manager = "2.1.0-beta.0"
tauri-plugin-os = "2.0.0-beta.3"

[target."cfg(any(target_os = \"windows\", target_os = \"macos\"))".dependencies]
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy" }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
